--- a/Стиратель.html
+++ b/Стиратель.html
@@ -370,13 +370,13 @@
                 <h2 class="section-title">Галерея</h2>
                 <div class="gallery">
                     <div class="gallery-item">
-                        <img src="images/Без брони.jpg" alt="Стиратель без брони">
+                        <img src="images/No M.jpg" alt="No M">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/Броня.jpg" alt="Стиратель в броне">
+                        <img src="images/M.jpg" alt="M">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/Заряженная броня.jpg" alt="Заряженная броня">
+                        <img src="images/Full M.jpg" alt="Full M">
                     </div>
                 </div>
             </div>
